# ai-unifier-assesment

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  report.md  requirements.txt  setup.cfg  tox.ini
alembic/: env.py
alembic/versions/: 001_create_metrics_table.py  002_create_evaluation_tables.py  003_create_agent_and_message_tables.py
dashboard/: app.py  requirements.txt
dashboard/pages/: 0_chat.py  1_metrics.py  2_evaluation.py  3_code_healing.py
src/: app.py
src/ai_unifier_assesment/: __main__.py  app.py  benchmark.py  config.py  dependencies.py  generate_testset.py  ingest.py
src/ai_unifier_assesment/agent/: code_healing_event_processor.py  code_writer_service.py  coding_agent.py  (+6 more)
tests/: .coveragerc  conftest.py  llm_helper.py  test_app.py  test_chat_service.py  test_config.py  test_ingest.py  test_main.py
tests/agent/: test_code_healing_event_processor.py  test_code_writer_service.py  test_coding_agent.py  test_initial_code_generator.py  test_language_detector.py  test_self_healing_agent.py  test_trip_planner_agent.py
tests/evaluation/: test_benchmark_service.py  test_evaluation_data_service.py  test_testset_generator_service.py
tests/large_language_model/: test_model.py
tests/rag/: test_document_loader_service.py  test_embedding_service.py  test_ingestion_service.py  test_qa_service.py  test_vector_store_service.py
tests/routes/: test_agent.py  test_chat.py  test_code_healing.py  test_rag.py
tests/services/: test_chat_service.py  test_memory_service.py  test_stream_metrics.py
(+47 files in other folders)
