# Project configuration
# Dependencies and metadata for the project

[metadata]
name = ai-unifier-assesment
description = AI Unifier Assessment Project
author = Arun
license = MIT
platforms = any

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    = src

python_requires = >=3.12

# Runtime dependencies (add your project dependencies here)
install_requires =
    importlib-metadata; python_version<"3.12"

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Development/testing dependencies
# Install with: pip install -e .[testing]
testing =
    pytest
    pytest-cov
    pytest-random-order
    pytest-watch
    pytest-testmon
    pytest-xdist
    ruff
    mypy
    bandit
    pip-audit
    radon
    xenon

[tool:pytest]
addopts = --verbose
norecursedirs =
    .git
    .tox
    dist
    build
    __pycache__
testpaths = tests

[flake8]
max_line_length = 120
exclude =
    .tox
    build
    dist
    .eggs
    __pycache__

[isort]
profile = black
line_length = 120
